--- a/k8s_manifests/edge/uat/jobs/mysql.yaml
+++ b/k8s_manifests/edge/uat/jobs/mysql.yaml
@@ -1,7 +1,7 @@
 - job_name: "mysql_exporter"
   static_configs:
     - targets:
-        - uat-mysqld-exporter.monitor-agent.svc.cluster.local:9104
+        - mysqld-exporter.monitor-agent.svc.cluster.local:9104
       labels:
         env: uat
         instance: uat-mydb.v16cp.me
