--- a/k8s_manifests/edge/prod/jobs/k8s.yaml
+++ b/k8s_manifests/edge/prod/jobs/k8s.yaml
@@ -271,3 +271,10 @@
       regex: __meta_kubernetes_node_label_(.+)
     - target_label: "env"
       replacement: prod
+
+- job_name: "kube-state-metrics"
+  static_configs:
+    - targets:
+        - kube-state-metrics.kube-system.svc.cluster.local:8080
+      labels:
+        env: prod
