--- a/k8s_manifests/edge/prod/kustomization.yaml
+++ b/k8s_manifests/edge/prod/kustomization.yaml
@@ -12,10 +12,13 @@ configMapGenerator:
       - config.yaml=./conf/config.yaml
   - name: vmagent-jobs
     files:
+      - cloudwatch.yaml=./jobs/cloudwatch.yaml
       - container-cadvisor.yaml=./jobs/container-cadvisor.yaml
       - domain-exporter.yaml=./jobs/domain-exporter.yaml
+      - fluentd.yaml=./jobs/fluentd.yaml
       - http.yaml=./jobs/http.yaml
       - k8s.yaml=./jobs/k8s.yaml
+      - keda.yaml=./jobs/keda.yaml
       - mysql.yaml=./jobs/mysql.yaml
       - node-exporter.yaml=./jobs/node-exporter.yaml
       - rabbitmq.yaml=./jobs/rabbitmq.yaml
