--- a/k8s_manifests/edge/uat/kustomization.yaml
+++ b/k8s_manifests/edge/uat/kustomization.yaml
@@ -12,8 +12,12 @@ configMapGenerator:
       - config.yaml=./conf/config.yaml
   - name: vmagent-jobs
     files:
+      - cloudwatch.yaml=./jobs/cloudwatch.yaml
       - container-cadvisor.yaml=./jobs/container-cadvisor.yaml
+      - dotnet-metrics.yaml=./jobs/dotnet-metrics.yaml
+      - fluentd.yaml=./jobs/fluentd.yaml
       - k8s.yaml=./jobs/k8s.yaml
+      - keda.yaml=./jobs/keda.yaml
       - mysql.yaml=./jobs/mysql.yaml
       - node-exporter.yaml=./jobs/node-exporter.yaml
       - process-exporter.yaml=./jobs/process-exporter.yaml
