--- a/k8s_manifests/edge/dev/jobs/k8s.yaml
+++ b/k8s_manifests/edge/dev/jobs/k8s.yaml
@@ -105,6 +105,7 @@
       source_labels:
         - __meta_kubernetes_pod_node_name
       target_label: node
+
 - job_name: kubernetes-service-endpoints-slow
   kubernetes_sd_configs:
     - role: endpointslices
@@ -162,6 +163,7 @@
       target_label: node
   scrape_interval: 5m
   scrape_timeout: 30s
+
 - job_name: kubernetes-services
   kubernetes_sd_configs:
     - role: service
@@ -190,6 +192,7 @@
     - source_labels:
         - __meta_kubernetes_service_name
       target_label: service
+
 - job_name: kubernetes-pods
   kubernetes_sd_configs:
     - role: pod
@@ -240,3 +243,20 @@
         - kube-state-metrics.kube-system.svc.cluster.local:8080
       labels:
         env: devops
+
+- job_name: "kubernetes-kubelet"
+  scheme: https
+  tls_config:
+    ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+  bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+  kubernetes_sd_configs:
+    - role: node
+  relabel_configs:
+    - action: labelmap
+      regex: __meta_kubernetes_node_label_(.+)
+    - target_label: __address__
+      replacement: kubernetes.default.svc:443
+    - source_labels: [__meta_kubernetes_node_name]
+      regex: (.+)
+      target_label: __metrics_path__
+      replacement: /api/v1/nodes/${1}/proxy/metrics
