--- a/k8s_manifests/edge/prod/jobs/node-exporter.yaml
+++ b/k8s_manifests/edge/prod/jobs/node-exporter.yaml
@@ -31,3 +31,16 @@
     - source_labels: [__meta_ec2_tag_Name]
       target_label: "instance"
       action: "replace"
+
+- job_name: "eks-node-exporter"
+  kubernetes_sd_configs:
+    - role: endpoints
+  relabel_configs:
+    - source_labels: [__meta_kubernetes_endpoints_name]
+      regex: "node-exporter"
+      action: keep
+    - source_labels: [__meta_kubernetes_endpoint_node_name]
+      target_label: "instance"
+      action: "replace"
+    - target_label: "env"
+      replacement: prod
