--- a/k8s_manifests/edge/uat/jobs/k8s.yaml
+++ b/k8s_manifests/edge/uat/jobs/k8s.yaml
@@ -278,3 +278,20 @@
         - kube-state-metrics.kube-system.svc.cluster.local:8080
       labels:
         env: uat
+
+- job_name: "kubernetes-kubelet"
+  scheme: https
+  tls_config:
+    ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+  bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+  kubernetes_sd_configs:
+    - role: node
+  relabel_configs:
+    - action: labelmap
+      regex: __meta_kubernetes_node_label_(.+)
+    - target_label: __address__
+      replacement: kubernetes.default.svc:443
+    - source_labels: [__meta_kubernetes_node_name]
+      regex: (.+)
+      target_label: __metrics_path__
+      replacement: /api/v1/nodes/${1}/proxy/metrics
