--- a/k8s_manifests/edge/dev/jobs/vmcluster.yaml
+++ b/k8s_manifests/edge/dev/jobs/vmcluster.yaml
@@ -3,20 +3,36 @@
     - targets: ["vmagent:8429"]
       labels:
         env: devops
+
 - job_name: "vminsert"
-  static_configs:
-    - targets: ["vminsert:8480"]
+  kubernetes_sd_configs:
+    - role: endpoints
+  relabel_configs:
+    - source_labels: [__meta_kubernetes_endpoints_name]
+      regex: "vminsert"
+      action: keep
+    - target_label: "env"
+      replacement: devops
+
 - job_name: "vmstorage"
-  static_configs:
-    - targets:
-        [
-          "vmstorage-0.vmstorage.monitoring.svc.cluster.local:8482",
-          "vmstorage-1.vmstorage.monitoring.svc.cluster.local:8482",
-        ]
-      labels:
-        env: devops
+  kubernetes_sd_configs:
+    - role: endpoints
+  relabel_configs:
+    - source_labels: [__meta_kubernetes_endpoints_label_app]
+      regex: "vmstorage"
+      action: keep
+    - source_labels: [__meta_kubernetes_pod_container_port_number]
+      regex: "(8400|8401)"
+      action: drop
+    - target_label: "env"
+      replacement: devops
+
 - job_name: "vmselect"
-  static_configs:
-    - targets: ["vmselect:8481"]
-      labels:
-        env: devops
+  kubernetes_sd_configs:
+    - role: endpoints
+  relabel_configs:
+    - source_labels: [__meta_kubernetes_endpoints_name]
+      regex: "vmselect"
+      action: keep
+    - target_label: "env"
+      replacement: devops
