--- a/k8s_manifests/edge/prod/conf/config.yaml
+++ b/k8s_manifests/edge/prod/conf/config.yaml
@@ -1,7 +1,7 @@
 global:
   scrape_interval: 10s
   external_labels:
-    site: prod
+    env: prod
 
 scrape_config_files:
   - /vmagent/jobs/*.yaml
