--- a/k8s_manifests/server/kustomization.yaml
+++ b/k8s_manifests/server/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 resources:
-  # - namespace.yaml
+  - namespace.yaml
   - rbac.yaml
   - ./vmstorage
   - ./vminsert
   - ./vmselect
+  - ./vmalert
