--- a/k8s_manifests/edge/prod/kustomization.yaml
+++ b/k8s_manifests/edge/prod/kustomization.yaml
@@ -14,6 +14,7 @@ configMapGenerator:
     files:
       - cloudwatch.yaml=./jobs/cloudwatch.yaml
       - container-cadvisor.yaml=./jobs/container-cadvisor.yaml
+      - dotnet.yaml=./jobs/dotnet.yaml
       - domain-exporter.yaml=./jobs/domain-exporter.yaml
       - fluentd.yaml=./jobs/fluentd.yaml
       - http.yaml=./jobs/http.yaml
