fix vmcluster args

--- a/k8s_manifests/server/vmstorage/statefulset.yaml
+++ b/k8s_manifests/server/vmstorage/statefulset.yaml
@@ -47,6 +47,7 @@ spec:
             - --loggerLevel=INFO
             - --loggerOutput=stdout
             - --loggerFormat=json
+            - --dedup.minScrapeInterval=10s
           ports:
             - name: http
               containerPort: 8482
