--- a/k8s_manifests/server/vmselect/deployment.yaml
+++ b/k8s_manifests/server/vmselect/deployment.yaml
@@ -35,11 +35,11 @@ spec:
           imagePullPolicy: "IfNotPresent"
           securityContext: {}
           args:
-            - "--cacheDataPath=/vmselect/cache"
+            - --cacheDataPath=/vmselect/cache
             - --storageNode=vmstorage-0.vmstorage.monitoring.svc.cluster.local:8401
             - --storageNode=vmstorage-1.vmstorage.monitoring.svc.cluster.local:8401
             - --dedup.minScrapeInterval=10s
-            - --replicationFactor=2
+            - --replicationFactor=1
             - --envflag.enable=true
             - --envflag.prefix=VM_
             - --loggerFormat=json
