update vmagent jobs

--- a/k8s_manifests/edge/dev/jobs/k8s.yaml
+++ b/k8s_manifests/edge/dev/jobs/k8s.yaml
@@ -9,6 +9,8 @@
         - __meta_kubernetes_namespace
         - __meta_kubernetes_service_name
         - __meta_kubernetes_endpoint_port_name
+    - target_label: "cluster"
+      replacement: devops-eks
   scheme: https
   tls_config:
     ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
@@ -31,6 +33,8 @@
       target_label: __metrics_path__
     - target_label: "env"
       replacement: devops
+    - target_label: "cluster"
+      replacement: devops-eks
   scheme: https
   tls_config:
     ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
@@ -90,6 +94,8 @@
       source_labels:
         - __meta_kubernetes_pod_node_name
       target_label: node
+    - target_label: "cluster"
+      replacement: devops-eks
 
 - job_name: kubernetes-service-endpoints-slow
   kubernetes_sd_configs:
@@ -146,6 +152,8 @@
       source_labels:
         - __meta_kubernetes_pod_node_name
       target_label: node
+    - target_label: "cluster"
+      replacement: devops-eks
   scrape_interval: 5m
   scrape_timeout: 30s
 
@@ -177,50 +185,8 @@
     - source_labels:
         - __meta_kubernetes_service_name
       target_label: service
-
-# - job_name: kubernetes-pods
-#   kubernetes_sd_configs:
-#     - role: pod
-#   relabel_configs:
-#     - action: drop
-#       regex: true
-#       source_labels:
-#         - __meta_kubernetes_pod_container_init
-#     - action: keep_if_equal
-#       source_labels:
-#         - __meta_kubernetes_pod_annotation_prometheus_io_port
-#         - __meta_kubernetes_pod_container_port_number
-#     - action: keep
-#       regex: true
-#       source_labels:
-#         - __meta_kubernetes_pod_annotation_prometheus_io_scrape
-#     - action: replace
-#       regex: (.+)
-#       source_labels:
-#         - __meta_kubernetes_pod_annotation_prometheus_io_path
-#       target_label: __metrics_path__
-#     - action: replace
-#       regex: ([^:]+)(?::\d+)?;(\d+)
-#       replacement: $1:$2
-#       source_labels:
-#         - __address__
-#         - __meta_kubernetes_pod_annotation_prometheus_io_port
-#       target_label: __address__
-#     - action: labelmap
-#       regex: __meta_kubernetes_pod_label_(.+)
-#     - source_labels:
-#         - __meta_kubernetes_pod_name
-#       target_label: pod
-#     - source_labels:
-#         - __meta_kubernetes_pod_container_name
-#       target_label: container
-#     - source_labels:
-#         - __meta_kubernetes_namespace
-#       target_label: namespace
-#     - action: replace
-#       source_labels:
-#         - __meta_kubernetes_pod_node_name
-#       target_label: node
+    - target_label: "cluster"
+      replacement: devops-eks
 
 - job_name: "kube-state-metrics"
   static_configs:
@@ -228,6 +194,7 @@
         - kube-state-metrics.kube-system.svc.cluster.local:8080
       labels:
         env: devops
+        cluster: devops-eks
 
 - job_name: "kubernetes-kubelet"
   scheme: https
@@ -247,3 +214,5 @@
       replacement: /api/v1/nodes/${1}/proxy/metrics
     - target_label: "env"
       replacement: devops
+    - target_label: "cluster"
+      replacement: devops-eks
