--- a/k8s_manifests/edge/uat/jobs/k8s.yaml
+++ b/k8s_manifests/edge/uat/jobs/k8s.yaml
@@ -9,6 +9,8 @@
         - __meta_kubernetes_namespace
         - __meta_kubernetes_service_name
         - __meta_kubernetes_endpoint_port_name
+    - target_label: "cluster"
+      replacement: happy_casino_uat
   scheme: https
   tls_config:
     ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
@@ -69,6 +71,8 @@
       source_labels:
         - __meta_kubernetes_pod_node_name
       target_label: node
+    - target_label: "cluster"
+      replacement: happy_casino_uat
 - job_name: kubernetes-service-endpoints-slow
   kubernetes_sd_configs:
     - role: endpointslices
@@ -124,6 +128,8 @@
       source_labels:
         - __meta_kubernetes_pod_node_name
       target_label: node
+    - target_label: "cluster"
+      replacement: happy_casino_uat
   scrape_interval: 5m
   scrape_timeout: 30s
 - job_name: kubernetes-services
@@ -154,6 +160,8 @@
     - source_labels:
         - __meta_kubernetes_service_name
       target_label: service
+    - target_label: "cluster"
+      replacement: happy_casino_uat
 
 - job_name: "kubernetes-kubelet"
   scheme: https
@@ -173,6 +181,8 @@
       replacement: /api/v1/nodes/${1}/proxy/metrics
     - target_label: "env"
       replacement: uat
+    - target_label: "cluster"
+      replacement: happy_casino_uat
 
 - job_name: "kubernetes-cadvisor"
   scheme: https
@@ -192,6 +202,8 @@
       regex: __meta_kubernetes_node_label_(.+)
     - target_label: "env"
       replacement: uat
+    - target_label: "cluster"
+      replacement: happy_casino_uat
 
 - job_name: "kube-state-metrics"
   static_configs:
@@ -199,3 +211,4 @@
         - kube-state-metrics.kube-system.svc.cluster.local:8080
       labels:
         env: uat
+        cluster: happy_casino_uat
