--- a/k8s_manifests/edge/dev/jobs/node-exporter.yaml
+++ b/k8s_manifests/edge/dev/jobs/node-exporter.yaml
@@ -55,3 +55,5 @@
       action: "replace"
     - target_label: "env"
       replacement: devops
+    - target_label: "cluster"
+      replacement: devops-eks
