update alert rule

--- a/k8s_manifests/server/vmalert/conf/alert-rule.yaml
+++ b/k8s_manifests/server/vmalert/conf/alert-rule.yaml
@@ -179,14 +179,13 @@ groups:
   - name: HC Game
     rules:
       - alert: HC Game Online Users
-        expr: redis_keys_count >= 0
+        expr: redis_keys_count{env="prod"} >= 0
         for: 30m
         labels:
           severity: info
-          env: prod
         annotations:
           summary: "HC Game {{ $labels.env }} Online Users: {{ $value }}"
-          dashboard: "https://grafana.v16cp.me/d/6oXEzf4Iz/hc-game?orgId=1&var-env={{ $labels.env }}"
+          dashboard: "https://grafana.v16cp.me/d/HCGAME/hc-game?orgId=1&var-env={{ $labels.env }}"
 
   - name: Redis_Alert
     rules:
