update FQDN for metrics remote write

--- a/k8s_manifests/edge/base/deployment.yaml
+++ b/k8s_manifests/edge/base/deployment.yaml
@@ -29,7 +29,7 @@ spec:
             - -envflag.enable=true
             - -envflag.prefix=VM_
             - -loggerFormat=json
-            - -remoteWrite.url=https://vminsert.v16cp.me/insert/0/prometheus/api/v1/write
+            - -remoteWrite.url=https://metrics-collector.v16cp.me/insert/0/prometheus/api/v1/write
             - -promscrape.maxScrapeSize=30MB
           imagePullPolicy: IfNotPresent
           ports:
