--- a/k8s_manifests/server/vmalert/deployment.yaml
+++ b/k8s_manifests/server/vmalert/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           args:
             - --datasource.url=http://vmselect:8481/select/0/prometheus/
             - --remoteRead.url=http://vmselect:8481/select/0/prometheus/
-            - --remoteWrite.url=https://vminsert.v16cp.me/insert/0/prometheus/
+            - --remoteWrite.url=https://metrics-collector.v16cp.me/insert/0/prometheus/
             - --notifier.url=http://alertmanager:9093
             - --rule=/vmalert/rules/*.yaml
             - --envflag.enable=true
