--- a/k8s_manifests/edge/dev/kustomization.yaml
+++ b/k8s_manifests/edge/dev/kustomization.yaml
@@ -25,7 +25,7 @@ configMapGenerator:
       - rabbitmq.yaml=./jobs/rabbitmq.yaml
       - redis.yaml=./jobs/redis.yaml
       - vmcluster.yaml=./jobs/vmcluster.yaml
-
+      - traefik-exporter.yaml=./jobs/traefik-exporter.yaml
 patches:
   - target:
       kind: Ingress
