[dev]add traefik scrap job

--- a/k8s_manifests/edge/dev/jobs/traefik-exporter.yaml
+++ b/k8s_manifests/edge/dev/jobs/traefik-exporter.yaml
@@ -1,4 +1,4 @@
-- job_name: "traefik-monitor"
+- job_name: "traefik-monitor-stg"
   ec2_sd_configs:
     - region: ap-east-1
       port: 8888
@@ -12,3 +12,18 @@
       target_label: __param_target
     - target_label: "env"
       replacement: stg
+
+- job_name: "traefik-monitor-dev"
+  ec2_sd_configs:
+    - region: ap-east-1
+      port: 8888
+      filters:
+        - name: tag:Name
+          values:
+            - GS-dev
+  metrics_path: /metrics
+  relabel_configs:
+    - source_labels: [__address__]
+      target_label: __param_target
+    - target_label: "env"
+      replacement: dev
