--- a/k8s_manifests/edge/dev/kustomization.yaml
+++ b/k8s_manifests/edge/dev/kustomization.yaml
@@ -36,4 +36,4 @@ patches:
         value: metric-sources-dev.v16cp.me
       - op: replace
         path: /metadata/annotations/alb.ingress.kubernetes.io~1security-groups
-        value: eks-cluster-sg-devops-eks-2099794627,monitoring
+        value: eks-cluster-sg-devops-eks-2099794627,metrics-source
