k8s manifests update update edge metric source ingress

--- a/k8s_manifests/edge/uat/kustomization.yaml
+++ b/k8s_manifests/edge/uat/kustomization.yaml
@@ -24,3 +24,20 @@ configMapGenerator:
       - rabbitmq.yaml=./jobs/rabbitmq.yaml
       - redis.yaml=./jobs/redis.yaml
       - vm.yaml=./jobs/vm.yaml
+patches:
+  - target:
+      kind: Ingress
+      name: vmagent
+    patch: |-
+      - op: add
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1load-balancer-name
+        value: infra-internal
+      - op: add
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1group.name
+        value: infra-internal
+      - op: replace
+        path: /spec/rules/0/host
+        value: metric-sources-uat.v16cp.me
+      - op: replace
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1security-groups
+        value: Public_Access,whitelist
