--- a/k8s_manifests/edge/dev/kustomization.yaml
+++ b/k8s_manifests/edge/dev/kustomization.yaml
@@ -32,6 +32,12 @@ patches:
       kind: Ingress
       name: vmagent
     patch: |-
+      - op: add
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1load-balancer-name
+        value: infra-internal
+      - op: add
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1group.name
+        value: infra-internal
       - op: replace
         path: /spec/rules/0/host
         value: metric-sources-dev.v16cp.me
