update linkerd job

--- a/k8s_manifests/edge/dev/jobs/linkerd.yaml
+++ b/k8s_manifests/edge/dev/jobs/linkerd.yaml
@@ -4,6 +4,7 @@
       namespaces:
         names:
           - "linkerd"
+          # - "linkerd-viz"
   relabel_configs:
     - source_labels:
         - __meta_kubernetes_pod_container_port_name
@@ -18,7 +19,7 @@
     - role: pod
   relabel_configs:
     - source_labels:
-        - __meta_kubernetes_pod_label_linkerd_io_control_plane_component
+        - __meta_kubernetes_pod_label_component
         - __meta_kubernetes_pod_container_port_name
       action: keep
       regex: linkerd-service-mirror;admin-http$
@@ -76,4 +77,4 @@
       regex: __tmp_pod_label_linkerd_io_(.+)
     # Copy tmp labels into real labels
     - action: labelmap
-      regex: __tmp_pod_label_(.+)
+      regex: __tmp_pod_label_(.+)/prometheus
