--- a/k8s_manifests/server/vmselect/kustomization.yaml
+++ b/k8s_manifests/server/vmselect/kustomization.yaml
@@ -4,3 +4,25 @@ namespace: monitoring
 resources:
   - deployment.yaml
   - service.yaml
+  - rbac.yaml
+  - ingress.yaml
+patches:
+  - target:
+      kind: Ingress
+      name: vmselect
+    patch: |-
+      - op: add
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1load-balancer-name
+        value: internaloidc
+      - op: add
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1group.name
+        value: internal-oidc
+      - op: add
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1auth-type
+        value: oidc
+      - op: add
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1auth-idp-oidc
+        value: '{"issuer":"https://keycloak.v16cp.me/auth/realms/master","authorizationEndpoint":"https://keycloak.v16cp.me/auth/realms/master/protocol/openid-connect/auth","tokenEndpoint":"https://keycloak.v16cp.me/auth/realms/master/protocol/openid-connect/token","userInfoEndpoint":"https://keycloak.v16cp.me/auth/realms/master/protocol/openid-connect/userinfo","secretName":"vmselect-secret"}'
+      - op: replace
+        path: /metadata/annotations/alb.ingress.kubernetes.io~1security-groups
+        value: "whitelist,Public_Access"
