--- a/k8s_manifests/edge/base/deployment.yaml
+++ b/k8s_manifests/edge/base/deployment.yaml
@@ -15,6 +15,7 @@ spec:
     metadata:
       labels:
         app: vmagent
+      annotations: {}
     spec:
       serviceAccountName: vmagent
       securityContext: {}
