--- a/k8s_manifests/edge/prod/kustomization.yaml
+++ b/k8s_manifests/edge/prod/kustomization.yaml
@@ -28,6 +28,22 @@ configMapGenerator:
 
 patches:
   - target:
+      kind: Deployment
+      name: vmagent
+    patch: |-
+      - op: add
+        path: "/spec/template/metadata/annotations/vaultpy.io~1target-resource-type"
+        value: secret
+      - op: add
+        path: "/spec/template/metadata/annotations/vaultpy.io~1target-resource-name"
+        value: vmagent-secret
+      - op: add
+        path: "/spec/template/metadata/annotations/vaultpy.io~1kv2-name"
+        value: v16-devops
+      - op: add
+        path: "/spec/template/metadata/annotations/vaultpy.io~1kv2-path"
+        value: /monitoring/victoriametrics/prod/vmagent/secret
+  - target:
       kind: Ingress
       name: vmagent
     patch: |-
