--- a/k8s_manifests/server/vmselect/ingress.yaml
+++ b/k8s_manifests/server/vmselect/ingress.yaml
@@ -5,7 +5,8 @@ metadata:
   name: vmselect
   namespace: monitoring
   annotations:
-    alb.ingress.kubernetes.io/load-balancer-name: vmselect
+    alb.ingress.kubernetes.io/load-balancer-name: internaloidc
+    alb.ingress.kubernetes.io/group.name: internal-oidc
     alb.ingress.kubernetes.io/scheme: internal
     alb.ingress.kubernetes.io/backend-protocol: HTTP
     alb.ingress.kubernetes.io/target-type: "ip"
@@ -14,6 +15,10 @@ metadata:
     alb.ingress.kubernetes.io/ssl-redirect: "443"
     alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true,idle_timeout.timeout_seconds=60
     alb.ingress.kubernetes.io/security-groups: sample
+    alb.ingress.kubernetes.io/auth-type: oidc
+    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
+    alb.ingress.kubernetes.io/auth-session-timeout: 14400
+    alb.ingress.kubernetes.io/auth-idp-oidc: '{"issuer":"https://keycloak.v16cp.me/auth/realms/master","authorizationEndpoint":"https://keycloak.v16cp.me/auth/realms/master/protocol/openid-connect/auth","tokenEndpoint":"https://keycloak.v16cp.me/auth/realms/master/protocol/openid-connect/token","userInfoEndpoint":"https://keycloak.v16cp.me/auth/realms/master/protocol/openid-connect/userinfo","secretName":"vmselect-secret"}'
 spec:
   ingressClassName: alb
   rules:
