k8s manifests update vmalert logger format and level setting enable Hot config reload

--- a/k8s_manifests/server/vmalert/deployment.yaml
+++ b/k8s_manifests/server/vmalert/deployment.yaml
@@ -31,6 +31,9 @@ spec:
             - --envflag.enable=true
             - --envflag.prefix=VM_
             - --loggerFormat=json
+            - --configCheckInterval=1m
+            - --loggerFormat=json
+            - --loggerLevel=ERROR
           ports:
             - name: http
               containerPort: 8880
