--- a/k8s_manifests/server/vminsert/deployment.yaml
+++ b/k8s_manifests/server/vminsert/deployment.yaml
@@ -18,6 +18,14 @@ spec:
     spec:
       automountServiceAccountToken: true
       affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: loadtype
+                    operator: NotIn
+                    values:
+                      - high
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - podAffinityTerm:
