k8s manifests update add node affinity

--- a/k8s_manifests/server/vmalert/deployment.yaml
+++ b/k8s_manifests/server/vmalert/deployment.yaml
@@ -63,3 +63,12 @@ spec:
         - name: vmalert-rules
           configMap:
             name: vmalert-rules
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: loadtype
+                    operator: NotIn
+                    values:
+                      - high
